--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express-rate-limit": "^5.1.3",
@@ -57,6 +58,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
+    "prisma": "^6.8.2",
     "winston": "^3.17.0",
     "xss": "^1.0.15"
   }
