--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "baseUrl": "./src",
     "paths": {
       "*": ["*"],
-      "myapp": ["config/index.ts"],
+      "hoopin": ["config/index.ts"],
       "route": ["route/index.ts"]
     },
     "experimentalDecorators": true,
