hoopin [Feat]: Refactor to PostgreSQL #1
[refactor]: Update environment variables and references from 'myapp' to 'hoopin'

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-APP_NAME=myapp
+APP_NAME=hoopin
 
 API_URL=http://localhost:{PORT}/api/{API_VERSION}
 API_VERSION=v1
@@ -10,7 +10,7 @@ PORT=3582
 COOKIE_NAME=token
 
 DB_URI=
-DB_NAME=myapp
+DB_NAME=hoopin
 DB_PROTOCOL=mongodb+srv://
 DB_HOST=
 DB_USER=
