--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.27.0",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
+    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.16.5",
+    "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.23.0",
     "jest": "^29.7.0",
@@ -35,7 +36,6 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@prisma/client": "^6.8.2",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express-rate-limit": "^5.1.3",
@@ -49,6 +49,8 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.31.8",
+    "drizzle-orm": "^0.38.4",
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
@@ -58,7 +60,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
-    "prisma": "^6.8.2",
+    "pg": "^8.16.3",
     "winston": "^3.17.0",
     "xss": "^1.0.15"
   }
