--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "baseUrl"         : "./src",
     "paths"           : {
       "*"     : ["*"],
-      "hoopin": ["config/index.ts"],
+      "gameover": ["config/index.ts"],
       "route" : ["route/index.ts"]
     },
     "experimentalDecorators"          : true,
