--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/hpp": "^0.2.6",
     "@types/jsonwebtoken": "^9.0.9",
     "argon2": "^0.41.1",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "bson-objectid": "^2.0.4",
