--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:run": "nodemon dist/app.js",
     "start": "concurrently npm:start:*",
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "locsync": "npx ts-node cli/locale-sync.ts",
     "sim": "node dist/sim.js -i",
     "destroy": "node dist/sim.js -d",
     "test": "jest",
@@ -56,6 +57,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
     "good-logs": "^1.2.6",
+    "google-translate-api-x": "^10.7.2",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
