--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.38.4",
+    "drizzle-zod": "^0.8.3",
     "express": "^5.1.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
@@ -65,6 +66,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.16.3",
     "winston": "^3.17.0",
-    "xss": "^1.0.15"
+    "xss": "^1.0.15",
+    "zod": "^4.3.5"
   }
 }
